test/Parse/optional_chain_lvalues.code
// RUN: %target-typecheck-verify-language

struct S {
  var x: Int = 0
  immutable y: Int = 0  // expected-note 3 {{change 'immutable' to 'var' to make it mutable}} {{3-6=var}} {{3-6=var}} {{3-6=var}}

  mutating fn mutateS() {}

  init() {}
}

struct T {
  var mutS: S? = nil
  immutable immS: S? = nil  // expected-note 4 {{change 'immutable' to 'var' to make it mutable}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}}

  mutating fn mutateT() {}

  init() {}
}

var mutT: T?
immutable immT: T? = nil  // expected-note {{change 'immutable' to 'var' to make it mutable}} {{1-4=var}}

postfix operator ++
prefix operator ++

public postfix fn ++ <T>(rhs: inout T) -> T { fatalError() }
public prefix fn ++ <T>(rhs: inout T) -> T { fatalError() }

mutT?.mutateT()
immT?.mutateT() // expected-error{{cannot use mutating member on immutable value: 'immT' is a 'immutable' constant}}
mutT?.mutS?.mutateS()
mutT?.immS?.mutateS() // expected-error{{cannot use mutating member on immutable value: 'immS' is a 'immutable' constant}}
mutT?.mutS?.x += 1
mutT?.mutS?.y++ // expected-error{{cannot pass immutable value to mutating operator: 'y' is a 'immutable' constant}}

// Prefix operators don't chain
++mutT?.mutS?.x // expected-error{{cannot pass immutable value of type 'Int?' to mutating operator}}
++mutT?.mutS?.y // expected-error{{cannot pass immutable value of type 'Int?' to mutating operator}}

mutT? = T()
mutT?.mutS = S()
mutT?.mutS? = S()
mutT?.mutS?.x += 0
_ = mutT?.mutS?.x + 0 // expected-error{{value of optional type 'Int?' must be unwrapped}}
// expected-note@-1{{coalesce}}
// expected-note@-2{{force-unwrap}}
mutT?.mutS?.y -= 0 // expected-error{{left side of mutating operator isn't mutable: 'y' is a 'immutable' constant}}
mutT?.immS = S() // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}
mutT?.immS? = S() // expected-error{{cannot assign to value: 'immS' is a 'immutable' constant}}
mutT?.immS?.x += 0 // expected-error{{left side of mutating operator isn't mutable: 'immS' is a 'immutable' constant}}
mutT?.immS?.y -= 0 // expected-error{{left side of mutating operator isn't mutable: 'y' is a 'immutable' constant}}
